fix: Añadido gap 1rem en el componente de Sistema para móvil

--- a/src/styles/system.css
+++ b/src/styles/system.css
@@ -16,6 +16,7 @@
 		grid-column: span 1;
 		font-size: .7rem;
 		line-height: 1rem;
+		gap: 1rem;
 	}
 
 }
